# falsify

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  cabal.project.ci  falsify.cabal  flake.nix
.github/workflows/: haskell-ci.yml
demo/: Main.hs  demo.cabal
demo/Demo/: Distribution.hs  Functions.hs  HowToSpecifyIt.hs  Simple.hs  TestOptions.hs  TestShrinking.hs
demo/demo/: Main.hs
demo/demo/Demo/: Blogpost.hs  Context.hs  Distribution.hs  Functions.hs  HowToSpecifyIt.hs  Predicates.hs  TestOptions.hs  TestShrinking.hs
demo/src/: Main.hs
demo/src/Demo/: TestOptions.hs  TestShrinking.hs
demo/template/: Main.hs
falsify/: CHANGELOG.md  falsify.cabal
falsify/src/Data/Falsify/: Permutation.hs  ProperFraction.hs
falsify/src/Data/Falsify/Internal/: Integer.hs  List.hs
falsify/src/Test/: Falsify.hs
falsify/src/Test/Falsify/: Context.hs  Driver.hs  Fun.hs  GenDefault.hs  Generator.hs  Interactive.hs  Marked.hs  Predicate.hs  Property.hs  Range.hs  SampleTree.hs  ShrinkTree.hs
falsify/src/Test/Falsify/GenDefault/: Std.hs
falsify/src/Test/Falsify/Internal/: Context.hs  Driver.hs  Fun.hs  Generator.hs  Property.hs  SampleTree.hs  Shrinking.hs
falsify/src/Test/Falsify/Internal/Driver/: ReplaySeed.hs
falsify/src/Test/Falsify/Internal/Generator/: Compound.hs  Function.hs  Precision.hs  Shrinking.hs  Simple.hs
falsify/src/Test/Falsify/Internal/Marked/: Tree.hs
falsify/src/Test/Falsify/Reexported/Generator/: Compound.hs  Function.hs  Shrinking.hs
falsify/test/: Main.hs
falsify/test/TestSuite/: GenDefault.hs  Regression.hs
falsify/test/TestSuite/Prop/Generator/: Function.hs  Prim.hs  Selective.hs  Shrinking.hs  Simple.hs
falsify/test/TestSuite/Sanity/: Predicate.hs  Range.hs  Selective.hs
falsify/test/TestSuite/Util/: List.hs
lib/: CHANGELOG.md  falsify.cabal
lib/src/Data/Falsify/: Concrete.hs  ConcreteFun.hs  Integer.hs  List.hs  Marked.hs  Tree.hs  WordN.hs
lib/src/Test/Falsify/: Fun.hs  GenDefault.hs  Generator.hs  Interactive.hs  Marked.hs  Predicate.hs  Range.hs
lib/src/Test/Falsify/GenDefault/: Std.hs
lib/src/Test/Falsify/Generator/: Default.hs  Tag.hs
lib/src/Test/Falsify/Internal/: Driver.hs  Generator.hs  ProperFraction.hs  Property.hs  Property.hs-boot  Range.hs  SampleTree.hs  Search.hs
lib/src/Test/Falsify/Internal/Driver/: Tasty.hs
lib/src/Test/Falsify/Internal/Generator/: Definition.hs  Shrinking.hs
lib/src/Test/Falsify/Reexported/Generator/: Compound.hs  Function.hs  Precision.hs  Shrinking.hs  Simple.hs  Text.hs
lib/src/Test/Tasty/: Falsify.hs
lib/test/: Main.hs
lib/test/TestSuite/: GenDefault.hs  Regression.hs
lib/test/TestSuite/Prop/Generator/: Compound.hs  Function.hs  Marking.hs  Precision.hs  Prim.hs  Selective.hs  Shrinking.hs  Simple.hs  Text.hs
lib/test/TestSuite/Sanity/: Predicate.hs  Range.hs  Selective.hs
lib/test/TestSuite/Util/: Tree.hs
src/Data/Falsify/: Integer.hs  List.hs  Marked.hs  Tree.hs
src/Test/: Falsify.hs
src/Test/Falsify/: Debugging.hs  Driver.hs  Entropy.hs  Generator.hs  Interactive.hs  Nudge.hs  Predicate.hs  Property.hs  Range.hs  SampleTree.hs  Util.hs
src/Test/Falsify/Driver/: ReplaySeed.hs
src/Test/Falsify/Entropy/: Tree.hs
src/Test/Falsify/Generator/: Auxiliary.hs  Compound.hs  Debugging.hs  Primitive.hs  Simple.hs
src/Test/Falsify/Internal/: Driver.hs  Generator.hs  Property.hs  Range.hs  Search.hs  Tasty.hs
src/Test/Falsify/Internal/Driver/: Tasty.hs
src/Test/Falsify/Internal/Generator/: Definition.hs  ShrinkStep.hs  Shrinking.hs  Truncated.hs
src/Test/Falsify/Reexported/Generator/: Auxiliary.hs  Compound.hs  Function.hs  Instances.hs  Simple.hs
src/Test/Falsify/Reexported/Generator/Function/: Perturb.hs  Reified.hs
src/Test/Falsify/Util/: Tree.hs
src/Test/Tasty/: Falsify.hs
tasty-falsify/: CHANGELOG.md  LICENSE  tasty-falsify.cabal
tasty-falsify/src/Test/Tasty/: Falsify.hs
tasty-falsify/src/Test/Tasty/Falsify/: CLI.hs  Options.hs  Test.hs
tasty-falsify/test/: Main.hs
tasty-falsify/test/TestSuite/Generator/: Compound.hs  Context.hs  Function.hs  Marking.hs  Precision.hs  Prim.hs  Selective.hs  Shrinking.hs  Simple.hs
test/: Main.hs
test/TestSuite/Prop/Data/: Integer.hs
test/TestSuite/Prop/Generator/: Auxiliary.hs  Compound.hs  Function.hs  Marking.hs  Prim.hs  Simple.hs
test/TestSuite/Sanity/: Auxiliary.hs  Compound.hs  Function.hs  Functions.hs  Generator.hs  Predicate.hs  Prim.hs  Range.hs  Selective.hs  Simple.hs  Tree.hs
test/TestSuite/Util/: Predicates.hs
