cabal-version:      3.0
name:               falsify
version:            0.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
  default-language:
      Haskell2010
  default-extensions:
      DeriveFoldable
      DeriveFunctor
      DerivingStrategies
      DisambiguateRecordFields
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      PatternSynonyms
      ScopedTypeVariables
      StandaloneDeriving
      TypeFamilies
      ViewPatterns
  build-depends:
      base >= 4.12

library
  import:
      lang
  exposed-modules:
      Test.Falsify
      Test.Falsify.Entropy
      Test.Falsify.Entropy.Tree
      Test.Falsify.Generator
      Test.Falsify.Generator.Compound
      Test.Falsify.Generator.Primitive
      Test.Falsify.Generator.Simple
      Test.Falsify.Nudge
      Test.Falsify.Range
      Test.Falsify.Util
      Test.Falsify.Util.Tree
  hs-source-dirs:
      src
  build-depends:
    , data-default
    , transformers

test-suite test-falsify
  import:
      lang
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  other-modules:
      TestSuite.Sanity.Generator
  build-depends:
    , falsify
    , splitmix
    , tasty
    , tasty-hunit
