cabal-version:      3.0
name:               falsify
version:            0.1.0
synopsis:           Property-based testing with internal integrated shrinking
description:        This library provides property based testing with support
                    for internal integrated shrinking: integrated in the sense
                    of Hedgehog, meaning that there is no need to write a
                    separate shrinker and generator; and internal in the sense
                    of Hypothesis, meaning that this works well even across
                    monadic bind.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
copyright:          Well-Typed LLP
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with:        GHC==8.6.5
                  , GHC==8.8.4
                  , GHC==8.10.7
                  , GHC==9.0.2
                  , GHC==9.2.5
                  , GHC==9.4.4

source-repository head
  type:     git
  location: https://github.com/well-typed/falsify

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Widentities
  build-depends:
      base >= 4.12 && < 4.18
  default-language:
      Haskell2010
  default-extensions:
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DisambiguateRecordFields
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      PatternSynonyms
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TypeApplications
      ViewPatterns

library
  import:
      lang
  exposed-modules:
      Test.Falsify
      Test.Falsify.Debugging
      Test.Falsify.Driver
      Test.Falsify.Driver.ReplaySeed
      Test.Falsify.Generator
      Test.Falsify.Generator.Auxiliary
      Test.Falsify.Nudge
      Test.Falsify.Property
      Test.Falsify.Range
      Test.Falsify.SampleTree

      Data.Falsify.List
      Data.Falsify.Marked
      Data.Falsify.Tree

      -- For consistency with the other tasty runners, we places these modules
      -- in the @Test.Tasty.*@ hiearchy instead of @Test.Falsify.*@.
      Test.Tasty.Falsify
  other-modules:
      Test.Falsify.Internal.Generator
      Test.Falsify.Internal.Generator.Definition
      Test.Falsify.Internal.Generator.Shrinking
      Test.Falsify.Internal.Generator.Truncated
      Test.Falsify.Internal.Property
      Test.Falsify.Internal.Search
      Test.Falsify.Internal.Tasty
      Test.Falsify.Reexported.Generator.Compound
      Test.Falsify.Reexported.Generator.Simple
  hs-source-dirs:
      src
  build-depends:
    , base16-bytestring
    , binary
    , bytestring
    , containers
    , data-default
    , mtl
    , optparse-applicative
    , splitmix
    , tagged
    , tasty
  other-extensions:
    CPP

test-suite test-falsify
  import:
      lang
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  other-modules:
      TestSuite.Sanity.Auxiliary
      TestSuite.Sanity.Compound
      TestSuite.Sanity.Prim
      TestSuite.Sanity.Range
      TestSuite.Sanity.Simple
      TestSuite.Sanity.Tree
  build-depends:
    , containers
    , data-default
    , falsify
    , QuickCheck
    , tasty
    , tasty-hunit

executable demo
  import:
      lang
  hs-source-dirs:
      demo
  main-is:
      Main.hs
  other-modules:
      Demo.Simple
      Demo.HowToSpecifyIt
  build-depends:
    , data-default
    , falsify
    , mtl
    , tasty
    , vector