cabal-version:      3.0
name:               demo
version:            0.1.0
synopsis:           Demo of the falsify package
description:        This contains a bunch of examples of using @falsify@ for
                    testing. Note that it is /not/ a test suite for @falsify@!
                    Many of the properties in the demo /fail/; after all,
                    failing properties are often more interesting than
                    properties that succeed.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Testing
build-type:         Simple
tested-with:        GHC==8.10.7
                  , GHC==9.0.2
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.7
                  , GHC==9.8.4
                  , GHC==9.10.3
                  , GHC==9.12.4
                  , GHC==9.14.1

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Widentities
  build-depends:
      base
  default-language:
      Haskell2010
  default-extensions:
      DataKinds
      DeriveGeneric
      DerivingStrategies
      DisambiguateRecordFields
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      ScopedTypeVariables

  if (impl(ghc >= 9.2))
    ghc-options:
      -Wunused-packages

executable demo
  import:
      lang
  hs-source-dirs:
      demo
  main-is:
      Main.hs
  other-modules:
      Demo.Blogpost
      Demo.Context
      Demo.Distribution
      Demo.Functions
      Demo.HowToSpecifyIt
      Demo.Predicates
      Demo.TestOptions
      Demo.TestShrinking
  build-depends:
    , containers
    , data-default
    , falsify
    , mtl
    , selective
    , splitmix
    , tasty
    , tasty-expected-failure
    , tasty-falsify
    , tasty-hunit
    , tasty-quickcheck
    , vector

executable template
  -- intentionally no import of lang
  hs-source-dirs:
      template
  main-is:
      Main.hs
  ghc-options:
      -Wall
  default-language:
      Haskell2010
  build-depends:
    , base
    , falsify
    , tasty
    , tasty-falsify

  if (impl(ghc >= 9.2))
    ghc-options:
      -Wunused-packages
